# trade-vulnerabilities-toolkit

./: .gitignore  CITATION.cff  LICENSE  README.md  USAGE.md  path.md  pyproject.toml  requirements.txt  run_pipeline.bat
configs/: blocs.yaml  default.yaml  template.yaml
outputs/: README.md
outputs/countries/BRICS/: BRICS_Export.xlsx  BRICS_Import.xlsx
outputs/countries/China/: China_Export.xlsx  China_Import.xlsx
outputs/countries/Germany/: Germany_Export.xlsx  Germany_Import.xlsx
outputs/countries/Hong_Kong/: Hong_Kong_Export.xlsx  Hong_Kong_Import.xlsx
outputs/countries/Indonesia/: Indonesia_Export.xlsx  Indonesia_Import.xlsx
outputs/countries/Japan/: Japan_Export.xlsx  Japan_Import.xlsx
outputs/countries/Korea,_Republic_of/: Korea,_Republic_of_Export.xlsx  Korea,_Republic_of_Import.xlsx
outputs/countries/MERCOSUR/: MERCOSUR_Export.xlsx  (+1 more)
scripts/: 00_check_environment.py  01_build_dataset.py  02_build_audits.py  03_add_regions.py  04_add_country_names.py  10_build_metrics_tables.py  11_build_chapter_index.py  12_export_config_summary_to_outputs.py  13_country_deep_dive.py  print_config_summary.py  run_all.py
src/: config.py  runtime_config.py
src/analysis/: country_analysis.py  trade_metrics.py  trade_tables.py  vulnerability_metrics.py  vulnerability_tables.py
src/io/: discover.py  excel_format.py  export.py  load.py  logging.py  normalize.py  validate.py
src/taxonomy/: basket.py  countries.py  regions.py
src/utils/: logging.py
src/viz/: plots.py  style_bw.py
trade_vulnerabilities_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+18 files in other folders)
