[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-vulnerabilities-toolkit"
version = "0.1.0"
description = "Config-driven pipeline for normalizing UN COMTRADE CSV exports and producing auditable trade vulnerability metrics."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "YOUR NAME" }
]
keywords = [
  "trade", "comtrade", "geoeconomics", "supply chains", "vulnerability", "HS"
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "matplotlib>=3.8",
  "pyarrow>=15.0",
  "openpyxl>=3.1",
  "pycountry>=24.6",
  "PyYAML>=6.0.1",
  "rich>=13.7",
]

[tool.setuptools.packages.find]
# IMPORTANT:
# We want to install the package named "src" (because our imports are src.*).
# So we search from repo root and include the src package.
where = ["."]
include = ["src*"]